@@ -48,9 +48,11 @@ import uk.gov.laa.ccms.data.model.ContactDetail;
 import uk.gov.laa.ccms.data.model.OfficeDetail;
 import uk.gov.laa.ccms.data.model.OutcomeResultLookupDetail;
 import uk.gov.laa.ccms.data.model.OutcomeResultLookupValueDetail;
+import uk.gov.laa.ccms.data.model.PriorAuthorityDetail;
 import uk.gov.laa.ccms.data.model.PriorAuthorityTypeDetail;
 import uk.gov.laa.ccms.data.model.ProceedingDetail;
 import uk.gov.laa.ccms.data.model.ProviderDetail;
+import uk.gov.laa.ccms.data.model.ScopeLimitationDetail;
 import uk.gov.laa.ccms.data.model.StageEndLookupDetail;
 import uk.gov.laa.ccms.data.model.StageEndLookupValueDetail;
 import uk.gov.laa.ccms.soa.gateway.model.AssessmentResult;
@@ -122,7 +124,7 @@ public class SoaApplicationMappingContextBuilder {
                 .description(soaCase.getCertificateType())))
         .blockOptional()
         .orElseThrow(() -> new CaabApplicationException(
-            String.format("Failed to retrieve applicationtype with code: %s",
+            "Failed to retrieve applicationtype with code: %s".formatted(
                 soaCase.getCertificateType()))) : null;
 
     // Lookup the application type display value - this should be based on the
@@ -135,7 +137,7 @@ public class SoaApplicationMappingContextBuilder {
                 .orElse(certificateLookup))
             .blockOptional()
             .orElseThrow(() -> new CaabApplicationException(
-                String.format("Failed to retrieve applicationtype with code: %s",
+                "Failed to retrieve applicationtype with code: %s".formatted(
                     soaApplicationDetails.getApplicationAmendmentType()))) : certificateLookup;
 
     // Find the correct provider office.
@@ -144,8 +146,8 @@ public class SoaApplicationMappingContextBuilder {
             String.valueOf(officeDetail.getId())))
         .findAny()
         .orElseThrow(() -> new CaabApplicationException(
-            String.format("Failed to find Office with id: %s",
-                soaProvider.getProviderOfficeId())));
+        "Failed to find Office with id: %s".formatted(
+            soaProvider.getProviderOfficeId())));
 
     // Get the Fee Earners for the relevant office, and Map them by contact id.
     final Map<Integer, ContactDetail> feeEarnerById =
@@ -254,7 +256,7 @@ public class SoaApplicationMappingContextBuilder {
 
   private AssessmentResult getMostRecentAssessment(final List<AssessmentResult> assessmentResults) {
     return assessmentResults != null ? assessmentResults.stream()
-        .max(Comparator.comparing(uk.gov.laa.ccms.soa.gateway.model.AssessmentResult::getDate,
+        .max(Comparator.comparing(AssessmentResult::getDate,
             Comparator.nullsFirst(Comparator.naturalOrder())))
         .orElse(null) : null;
   }
@@ -302,7 +304,7 @@ public class SoaApplicationMappingContextBuilder {
                     .block()))
             .toList();
 
-    final uk.gov.laa.ccms.data.model.ProceedingDetail proceedingLookup =
+    final ProceedingDetail proceedingLookup =
         lookupTuple.getT1();
 
     final CommonLookupValueDetail proceedingStatusLookup =
@@ -358,8 +360,8 @@ public class SoaApplicationMappingContextBuilder {
 
       // Build the scope limitation search criteria.
       // Only include the emergency flag in the criteria if the app type is classified as emergency.
-      uk.gov.laa.ccms.data.model.ScopeLimitationDetail searchCriteria =
-          new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+      ScopeLimitationDetail searchCriteria =
+          new ScopeLimitationDetail()
               .categoryOfLaw(soaCase.getApplicationDetails()
                   .getCategoryOfLaw().getCategoryOfLawCode())
               .matterType(proceeding.getMatterType())
@@ -421,13 +423,13 @@ public class SoaApplicationMappingContextBuilder {
 
     // Use the outcome result display data, if we have it.
     final OutcomeResultLookupValueDetail outcomeResultLookup =
-        !combinedOutcomeResults.getT2().getContent().isEmpty()
-            ? combinedOutcomeResults.getT2().getContent().getFirst() : null;
+        combinedOutcomeResults.getT2().getContent().isEmpty()
+            ? null : combinedOutcomeResults.getT2().getContent().getFirst();
 
     // Lookup the stage end display value.
     final StageEndLookupValueDetail stageEndLookup =
-        !combinedOutcomeResults.getT3().getContent().isEmpty()
-            ? combinedOutcomeResults.getT3().getContent().getFirst() : null;
+        combinedOutcomeResults.getT3().getContent().isEmpty()
+            ? null : combinedOutcomeResults.getT3().getContent().getFirst();
 
     // Update the builder with outcome-related lookup data
     contextBuilder.courtLookup(courtLookup)
@@ -486,7 +488,7 @@ public class SoaApplicationMappingContextBuilder {
     return Optional.ofNullable(awardTypes.get(award.getAwardType()))
         .map(AwardTypeLookupValueDetail::getAwardType)
         .orElseThrow(() -> new CaabApplicationException(
-            String.format("Failed to find AwardType with code: %s", award.getAwardType())));
+        "Failed to find AwardType with code: %s".formatted(award.getAwardType())));
   }
 
   /**
@@ -509,21 +511,21 @@ public class SoaApplicationMappingContextBuilder {
                     .description(soaPriorAuthority.getPriorAuthorityType())))
             .blockOptional()
             .orElseThrow(() -> new CaabApplicationException(
-                String.format("Failed to find PriorAuthorityType with code: %s",
-                    soaPriorAuthority.getPriorAuthorityType())));
+            "Failed to find PriorAuthorityType with code: %s".formatted(
+                soaPriorAuthority.getPriorAuthorityType())));
 
     // Build a Map of PriorAuthorityDetail keyed on code
-    Map<String, uk.gov.laa.ccms.data.model.PriorAuthorityDetail> priorAuthDetailMap =
+    Map<String, PriorAuthorityDetail> priorAuthDetailMap =
         priorAuthorityType.getPriorAuthorities().stream().collect(
-            Collectors.toMap(uk.gov.laa.ccms.data.model.PriorAuthorityDetail::getCode,
+            Collectors.toMap(PriorAuthorityDetail::getCode,
                 Function.identity()));
 
     // Build a List of priorAuthorityDetails paired with the common lookup for display info.
-    List<Pair<uk.gov.laa.ccms.data.model.PriorAuthorityDetail,
+    List<Pair<PriorAuthorityDetail,
         CommonLookupValueDetail>> priorAuthorityDetails =
         soaPriorAuthority.getDetails().stream()
             .map(priorAuthorityAttribute -> {
-              uk.gov.laa.ccms.data.model.PriorAuthorityDetail priorAuthorityDetail =
+              PriorAuthorityDetail priorAuthorityDetail =
                   priorAuthDetailMap.get(priorAuthorityAttribute.getName());
               return Pair.of(
                   priorAuthorityDetail,
@@ -539,7 +541,7 @@ public class SoaApplicationMappingContextBuilder {
   }
 
   private CommonLookupValueDetail getPriorAuthLookup(
-      final uk.gov.laa.ccms.data.model.PriorAuthorityDetail priorAuthorityDetail,
+      final PriorAuthorityDetail priorAuthorityDetail,
       final PriorAuthorityAttribute priorAuthorityAttribute) {
     String description;
 
@@ -554,8 +556,8 @@ public class SoaApplicationMappingContextBuilder {
               .orElse(priorAuthorityAttribute.getValue()))
           .blockOptional()
           .orElseThrow(() -> new CaabApplicationException(
-              String.format("Failed to find common value with code: %s",
-                  priorAuthorityAttribute.getValue())));
+          "Failed to find common value with code: %s".formatted(
+              priorAuthorityAttribute.getValue())));
     } else {
       description = priorAuthorityAttribute.getValue();
     }
