@@ -21,6 +21,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -426,11 +427,11 @@ public class EditGeneralDetailsSectionController {
   @PostMapping("/application/sections/linked-cases/search")
   public String linkedCasesSearchPost(
       @SessionAttribute(ACTIVE_CASE) final ActiveCase activeCase,
-      @ModelAttribute(CASE_SEARCH_CRITERIA) final CaseSearchCriteria caseSearchCriteria,
       @SessionAttribute(USER_DETAILS) final UserDetail user,
       @SessionAttribute(LINKED_CASES)
       final ResultsDisplay<LinkedCaseResultRowDisplay> currentlinkedCases,
       final RedirectAttributes redirectAttributes,
+      @Validated @ModelAttribute(CASE_SEARCH_CRITERIA) final CaseSearchCriteria caseSearchCriteria,
       final BindingResult bindingResult,
       final Model model) {
 
@@ -488,7 +489,7 @@ public class EditGeneralDetailsSectionController {
     final ApplicationDetails linkedCaseSearchResults = applicationMapper.toApplicationDetails(
         PaginationUtil.paginateList(Pageable.ofSize(size).withPage(page), caseSearchResults));
 
-    model.addAttribute(CURRENT_URL,  request.getRequestURL().toString());
+    model.addAttribute(CURRENT_URL, request.getRequestURL().toString());
 
     model.addAttribute(CASE_RESULTS_PAGE, linkedCaseSearchResults);
     session.setAttribute(CASE_RESULTS_PAGE, linkedCaseSearchResults);
@@ -517,7 +518,7 @@ public class EditGeneralDetailsSectionController {
             .filter(lc -> caseReferenceId.equals(lc.getCaseReferenceNumber()))
             .findFirst()
             .orElseThrow(() -> new CaabApplicationException(
-                String.format("Unable to add linked case with case reference: %s",
+                "Unable to add linked case with case reference: %s".formatted(
                     caseReferenceId)));
 
     //map base application to linked case
