@@ -26,7 +26,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -281,7 +280,7 @@ public class EditProceedingsAndCostsSectionController {
 
     model.addAttribute(CURRENT_PROCEEDING, proceeding);
     model.addAttribute(IS_SUBSTANTIVE_DEVOLVED_POWERS_APP,
-        application.getApplicationType().getId().equals(APP_TYPE_SUBSTANTIVE_DEVOLVED_POWERS));
+        APP_TYPE_SUBSTANTIVE_DEVOLVED_POWERS.equals(application.getApplicationType().getId()));
 
     //default cost limitations
     applicationService.prepareProceedingSummary(applicationId, application, user);
@@ -314,7 +313,7 @@ public class EditProceedingsAndCostsSectionController {
 
     populateMatterTypeDropdown(model, application.getCategoryOfLaw().getId());
 
-    if (action.equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(action)) {
       final ProceedingFlowFormData proceedingFlow = new ProceedingFlowFormData(action);
 
       model.addAttribute(PROCEEDING_FLOW_FORM_DATA, proceedingFlow);
@@ -375,7 +374,7 @@ public class EditProceedingsAndCostsSectionController {
     }
 
     //check if the data has been amended
-    if (action.equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(action)) {
       proceedingFlow.setAmended(Boolean.TRUE);
     } else {
       final ProceedingFlowFormData oldProceedingFlow =
@@ -384,17 +383,16 @@ public class EditProceedingsAndCostsSectionController {
       // Compare and set amended flag for MatterTypeDetails
       Optional.ofNullable(oldProceedingFlow)
           .map(ProceedingFlowFormData::getMatterTypeDetails)
-          .ifPresent(oldMatterTypeDetails -> {
+          .ifPresent(oldMatterTypeDetails ->
             compareAndSetAmended(oldMatterTypeDetails::getMatterType,
                 matterTypeDetails::getMatterType,
-                proceedingFlow);
-          });
+                proceedingFlow));
     }
 
     proceedingFlow.setMatterTypeDetails(matterTypeDetails);
     model.addAttribute(PROCEEDING_FLOW_FORM_DATA, proceedingFlow);
 
-    return String.format("redirect:/application/proceedings/%s/proceeding-type", action);
+    return "redirect:/application/proceedings/%s/proceeding-type".formatted(action);
 
   }
 
@@ -480,7 +478,7 @@ public class EditProceedingsAndCostsSectionController {
       return "application/proceedings-proceeding-type";
     }
 
-    if (action.equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(action)) {
       proceedingFlow.setAmended(Boolean.TRUE);
     } else {
       final ProceedingFlowFormData oldProceedingFlow =
@@ -489,18 +487,17 @@ public class EditProceedingsAndCostsSectionController {
       // Compare and set amended flag for ProceedingDetails
       Optional.ofNullable(oldProceedingFlow)
           .map(ProceedingFlowFormData::getProceedingDetails)
-          .ifPresent(oldProceedingDetails -> {
+          .ifPresent(oldProceedingDetails ->
             compareAndSetAmended(oldProceedingDetails::getProceedingType,
                 proceedingTypeDetails::getProceedingType,
-                proceedingFlow);
-          });
+                proceedingFlow));
 
     }
 
     proceedingFlow.setProceedingDetails(proceedingTypeDetails);
     model.addAttribute(PROCEEDING_FLOW_FORM_DATA, proceedingFlow);
 
-    return String.format("redirect:/application/proceedings/%s/further-details", action);
+    return "redirect:/application/proceedings/%s/further-details".formatted(action);
 
   }
 
@@ -597,7 +594,7 @@ public class EditProceedingsAndCostsSectionController {
       return "application/proceedings-further-details";
     }
 
-    if (action.equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(action)) {
       proceedingFlow.setAmended(Boolean.TRUE);
     } else {
 
@@ -621,7 +618,7 @@ public class EditProceedingsAndCostsSectionController {
     proceedingFlow.setFurtherDetails(furtherDetails);
     model.addAttribute(PROCEEDING_FLOW_FORM_DATA, proceedingFlow);
 
-    return String.format("redirect:/application/proceedings/%s/confirm", action);
+    return "redirect:/application/proceedings/%s/confirm".formatted(action);
   }
 
   /**
@@ -762,7 +759,7 @@ public class EditProceedingsAndCostsSectionController {
       // we do this last in case of errors
       proceedingFlow.setAmended(Boolean.FALSE);
     } else {
-      if (action.equals(ACTION_EDIT)) {
+      if (ACTION_EDIT.equals(action)) {
         final ProceedingDetail proceeding =
             (ProceedingDetail) session.getAttribute(CURRENT_PROCEEDING);
         model.addAttribute(PROCEEDING_SCOPE_LIMITATIONS, proceeding.getScopeLimitations());
@@ -774,7 +771,7 @@ public class EditProceedingsAndCostsSectionController {
 
     model.addAttribute(PROCEEDING_FLOW_FORM_DATA, proceedingFlow);
     model.addAttribute(IS_SUBSTANTIVE_DEVOLVED_POWERS_APP,
-        application.getApplicationType().getId().equals(APP_TYPE_SUBSTANTIVE_DEVOLVED_POWERS));
+        APP_TYPE_SUBSTANTIVE_DEVOLVED_POWERS.equals(application.getApplicationType().getId()));
 
     List<ScopeLimitationDetail> scopeLimitationDetails =
         (List<ScopeLimitationDetail>) model.getAttribute(PROCEEDING_SCOPE_LIMITATIONS);
@@ -871,7 +868,7 @@ public class EditProceedingsAndCostsSectionController {
         .map(Object::toString)
         .orElse(null);
 
-    if (action.equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(action)) {
 
       final ProceedingDetail proceeding = proceedingAndCostsMapper.toProceeding(
           proceedingFlow,
@@ -935,7 +932,7 @@ public class EditProceedingsAndCostsSectionController {
 
     // we need to different logic based off if the proceeding has just been created in memory or is
     // being edited
-    if (proceedingFlow.getAction().equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(proceedingFlow.getAction())) {
       // we need to get the scope limitations from the session
       final List<ScopeLimitationDetail> scopeLimitations =
           (List<ScopeLimitationDetail>) session.getAttribute(PROCEEDING_SCOPE_LIMITATIONS);
@@ -992,7 +989,7 @@ public class EditProceedingsAndCostsSectionController {
     ScopeLimitationFlowFormData scopeLimitationFlow =
         new ScopeLimitationFlowFormData(scopeLimitationAction);
 
-    if (scopeLimitationAction.equals(ACTION_EDIT)) {
+    if (ACTION_EDIT.equals(scopeLimitationAction)) {
       scopeLimitationFlow = (ScopeLimitationFlowFormData)
           session.getAttribute(SCOPE_LIMITATION_FLOW_FORM_DATA);
     }
@@ -1188,7 +1185,7 @@ public class EditProceedingsAndCostsSectionController {
       final HttpSession session) {
 
 
-    if (proceedingFlow.getAction().equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(proceedingFlow.getAction())) {
       final List<ScopeLimitationDetail> scopeLimitations =
           (List<ScopeLimitationDetail>) session.getAttribute(PROCEEDING_SCOPE_LIMITATIONS);
 
@@ -1231,7 +1228,7 @@ public class EditProceedingsAndCostsSectionController {
       model.addAttribute(CURRENT_PROCEEDING, proceeding);
     }
 
-    return String.format("redirect:/application/proceedings/%s/confirm",
+    return "redirect:/application/proceedings/%s/confirm".formatted(
         proceedingFlow.getAction());
   }
 
@@ -1277,7 +1274,7 @@ public class EditProceedingsAndCostsSectionController {
       final HttpSession session) {
 
     //remove the scope limitation from the session list
-    if (proceedingFlow.getAction().equals(ACTION_ADD)) {
+    if (ACTION_ADD.equals(proceedingFlow.getAction())) {
       final List<ScopeLimitationDetail> scopeLimitations =
           (List<ScopeLimitationDetail>) session.getAttribute(PROCEEDING_SCOPE_LIMITATIONS);
 
@@ -1299,7 +1296,7 @@ public class EditProceedingsAndCostsSectionController {
       model.addAttribute(CURRENT_PROCEEDING, proceeding);
     }
 
-    return String.format("redirect:/application/proceedings/%s/confirm",
+    return "redirect:/application/proceedings/%s/confirm".formatted(
         proceedingFlow.getAction());
   }
 
