@@ -20,6 +20,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.util.StringUtils;
 import org.springframework.validation.BindingResult;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.InitBinder;
@@ -141,7 +142,8 @@ public class OpponentsSectionController {
    */
   @PostMapping("/application/opponents/organisation/search")
   public String organisationSearch(
-      @ModelAttribute(ORGANISATION_SEARCH_CRITERIA) OrganisationSearchCriteria searchCriteria,
+      @Validated @ModelAttribute(ORGANISATION_SEARCH_CRITERIA)
+      OrganisationSearchCriteria searchCriteria,
       BindingResult bindingResult,
       Model model) {
 
@@ -304,9 +306,9 @@ public class OpponentsSectionController {
    */
   @PostMapping("/application/opponents/organisation/create")
   public String createNewOrganisation(
-      @ModelAttribute(CURRENT_OPPONENT) final AbstractOpponentFormData opponentFormData,
       @SessionAttribute(APPLICATION_ID) final String applicationId,
       @SessionAttribute(USER_DETAILS) final UserDetail user,
+      @Validated @ModelAttribute(CURRENT_OPPONENT) final AbstractOpponentFormData opponentFormData,
       final BindingResult bindingResult,
       final Model model) {
 
@@ -351,9 +353,10 @@ public class OpponentsSectionController {
    */
   @PostMapping("/application/opponents/individual/create")
   public String createNewIndividual(
-      @ModelAttribute(CURRENT_OPPONENT) final IndividualOpponentFormData opponentFormData,
       @SessionAttribute(APPLICATION_ID) final String applicationId,
       @SessionAttribute(USER_DETAILS) final UserDetail user,
+      @Validated @ModelAttribute(CURRENT_OPPONENT)
+      final IndividualOpponentFormData opponentFormData,
       final BindingResult bindingResult,
       final Model model) {
 
@@ -369,8 +372,8 @@ public class OpponentsSectionController {
                       .description(opponentFormData.getRelationshipToCase())))
               .blockOptional()
               .orElseThrow(() -> new CaabApplicationException(
-                  String.format("Failed to retrieve relationship to case with code: %s",
-                      opponentFormData.getRelationshipToCase())));
+              "Failed to retrieve relationship to case with code: %s".formatted(
+                  opponentFormData.getRelationshipToCase())));
 
       opponentFormData.setDateOfBirthMandatory(relationshipToCase.getDateOfBirthMandatory());
     }
@@ -411,7 +414,7 @@ public class OpponentsSectionController {
         .filter(opponentFormData -> opponentFormData.getId().equals(opponentId))
         .findFirst()
         .orElseThrow(() -> new CaabApplicationException(
-            String.format("Invalid Opponent Id: %s", opponentId)));
+            "Invalid Opponent Id: %s".formatted(opponentId)));
 
     model.addAttribute(CURRENT_OPPONENT, currentOpponent);
 
@@ -502,7 +505,7 @@ public class OpponentsSectionController {
                 && Boolean.TRUE.equals(opponentFormData.getDeletable()))
             .findFirst()
             .orElseThrow(() -> new CaabApplicationException(
-                String.format("Invalid Opponent Id: %s", opponentId)));
+            "Invalid Opponent Id: %s".formatted(opponentId)));
 
     model.addAttribute(CURRENT_OPPONENT, currentOpponent);
 
@@ -533,7 +536,7 @@ public class OpponentsSectionController {
                     && Boolean.TRUE.equals(opponentFormData.getDeletable()));
 
     if (!validOpponentId) {
-      throw new CaabApplicationException(String.format("Invalid Opponent Id: %s", opponentId));
+      throw new CaabApplicationException("Invalid Opponent Id: %s".formatted(opponentId));
     }
 
     opponentService.deleteOpponent(opponentId, user);
