@@ -1,5 +1,8 @@
 package uk.gov.laa.ccms.caab.controller.submission;
 
+import static uk.gov.laa.ccms.caab.constants.ContextConstants.AMENDMENTS;
+import static uk.gov.laa.ccms.caab.constants.ContextConstants.APPLICATION;
+import static uk.gov.laa.ccms.caab.constants.ContextConstants.CONTEXT_NAME;
 import static uk.gov.laa.ccms.caab.constants.SessionConstants.APPLICATION_CLIENT_NAMES;
 import static uk.gov.laa.ccms.caab.constants.SessionConstants.CLIENT_FLOW_FORM_DATA;
 import static uk.gov.laa.ccms.caab.constants.SessionConstants.CLIENT_REFERENCE;
@@ -17,8 +20,10 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.SessionAttribute;
 import uk.gov.laa.ccms.caab.constants.SubmissionConstants;
+import uk.gov.laa.ccms.caab.exception.CaabApplicationException;
 import uk.gov.laa.ccms.caab.model.BaseClientDetail;
 import uk.gov.laa.ccms.caab.service.ClientService;
 import uk.gov.laa.ccms.data.model.TransactionStatus;
@@ -41,7 +46,7 @@ public class ClientSubmissionsInProgressController {
    *
    * @return The view name for the submission in progress.
    */
-  @GetMapping("/submissions/client-create")
+  @GetMapping("/application/client-create")
   public String clientCreateSubmission(
       @SessionAttribute(SUBMISSION_TRANSACTION_ID) final String transactionId,
       final HttpSession session,
@@ -60,7 +65,7 @@ public class ClientSubmissionsInProgressController {
       session.removeAttribute(CLIENT_SEARCH_CRITERIA);
       session.removeAttribute(CLIENT_FLOW_FORM_DATA);
 
-      return "redirect:/submissions/client-create/confirmed";
+      return "redirect:/application/client-create/confirmed";
     }
 
     return viewIncludingPollCount(session, SUBMISSION_CREATE_CLIENT);
@@ -71,12 +76,18 @@ public class ClientSubmissionsInProgressController {
    *
    * @return The view name for the submission in progress.
    */
-  @GetMapping("/submissions/client-update")
+  @GetMapping("/{context}/client-update")
   public String clientUpdateSubmission(
+      @PathVariable(CONTEXT_NAME) final String context,
       @SessionAttribute(SUBMISSION_TRANSACTION_ID) final String transactionId,
       @SessionAttribute(USER_DETAILS) final UserDetail user,
       @SessionAttribute(APPLICATION_CLIENT_NAMES) final BaseClientDetail baseClient,
       final HttpSession session, final Model model) {
+
+    if (!APPLICATION.equalsIgnoreCase(context)
+        && !AMENDMENTS.equalsIgnoreCase(context)) {
+      throw new CaabApplicationException("Unknown context");
+    }
 
     model.addAttribute("submissionType", SUBMISSION_UPDATE_CLIENT);
 
@@ -94,7 +105,7 @@ public class ClientSubmissionsInProgressController {
       session.removeAttribute(CLIENT_FLOW_FORM_DATA);
       session.removeAttribute(APPLICATION_CLIENT_NAMES);
 
-      return "redirect:/submissions/client-update/confirmed";
+      return "redirect:/%s/client-update/confirmed".formatted(context);
     }
 
     return viewIncludingPollCount(session, SUBMISSION_UPDATE_CLIENT);
@@ -108,7 +119,7 @@ public class ClientSubmissionsInProgressController {
     if (session.getAttribute(SUBMISSION_POLL_COUNT) != null) {
       submissionPollCount = (int) session.getAttribute(SUBMISSION_POLL_COUNT);
       if (submissionPollCount >= submissionConstants.getMaxPollCount()) {
-        return String.format("redirect:/submissions/%s/failed", submissionType);
+        return "redirect:/application/%s/failed".formatted(submissionType);
       }
     }
     submissionPollCount = submissionPollCount + 1;
