@@ -11,7 +11,7 @@ public class FeatureDisabledException extends RuntimeException {
   private final Feature feature;
 
   public FeatureDisabledException(Feature feature) {
-    super(String.format("The '%s' feature is currently disabled.", feature.getName()));
+    super("The '%s' feature is currently disabled.".formatted(feature.getName()));
     this.feature = feature;
   }
 }
