@@ -59,11 +59,14 @@ import uk.gov.laa.ccms.data.model.OutcomeResultLookupValueDetail;
 import uk.gov.laa.ccms.data.model.PriorAuthorityDetail;
 import uk.gov.laa.ccms.data.model.PriorAuthorityTypeDetail;
 import uk.gov.laa.ccms.data.model.PriorAuthorityTypeDetails;
+import uk.gov.laa.ccms.data.model.ProviderDetail;
+import uk.gov.laa.ccms.data.model.ScopeLimitationDetail;
 import uk.gov.laa.ccms.data.model.ScopeLimitationDetails;
 import uk.gov.laa.ccms.data.model.StageEndLookupDetail;
 import uk.gov.laa.ccms.data.model.StageEndLookupValueDetail;
 import uk.gov.laa.ccms.soa.gateway.model.CaseDetail;
 import uk.gov.laa.ccms.soa.gateway.model.PriorAuthority;
+import uk.gov.laa.ccms.soa.gateway.model.ProceedingDetail;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Soa Application Mapping Context Builder Test")
@@ -79,14 +82,14 @@ class SoaApplicationMappingContextBuilderTest {
   private SoaApplicationMappingContextBuilder applicationService;
 
   @BeforeEach
-  void beforeEach(){
+  void beforeEach() {
     applicationService = new SoaApplicationMappingContextBuilder(providerService, lookupService, ebsApiClient);
   }
 
   @Test
   void testBuildSoaCaseOutcomeMappingContext() {
     final CaseDetail soaCase = buildCaseDetail("anytype");
-    final List<SoaProceedingMappingContext> SoaProceedingMappingContexts = Collections.singletonList(
+    final List<SoaProceedingMappingContext> soaProceedingMappingContexts = Collections.singletonList(
         SoaProceedingMappingContext.builder().build());
 
     final AwardTypeLookupDetail awardTypes = buildAwardTypeLookupDetail(soaCase);
@@ -95,7 +98,7 @@ class SoaApplicationMappingContextBuilderTest {
 
     final SoaCaseOutcomeMappingContext result = applicationService.buildCaseOutcomeMappingContext(
         soaCase,
-        SoaProceedingMappingContexts);
+        soaProceedingMappingContexts);
 
     assertNotNull(result);
     assertEquals(soaCase, result.getSoaCase());
@@ -104,20 +107,20 @@ class SoaApplicationMappingContextBuilderTest {
     assertNotNull(result.getLandAwards());
     assertNotNull(result.getOtherAssetAwards());
     assertEquals(1, result.getCostAwards().size());
-    assertEquals(soaCase.getAwards().get(0), result.getCostAwards().get(0));
+    assertEquals(soaCase.getAwards().getFirst(), result.getCostAwards().getFirst());
     assertEquals(1, result.getFinancialAwards().size());
-    assertEquals(soaCase.getAwards().get(1), result.getFinancialAwards().get(0));
+    assertEquals(soaCase.getAwards().get(1), result.getFinancialAwards().getFirst());
     assertEquals(1, result.getLandAwards().size());
-    assertEquals(soaCase.getAwards().get(2), result.getLandAwards().get(0));
+    assertEquals(soaCase.getAwards().get(2), result.getLandAwards().getFirst());
     assertEquals(1, result.getOtherAssetAwards().size());
-    assertEquals(soaCase.getAwards().get(3), result.getOtherAssetAwards().get(0));
-    assertEquals(SoaProceedingMappingContexts, result.getProceedingOutcomes());
+    assertEquals(soaCase.getAwards().get(3), result.getOtherAssetAwards().getFirst());
+    assertEquals(soaProceedingMappingContexts, result.getProceedingOutcomes());
   }
 
   @Test
   void testBuildSoaCaseOutcomeMappingContext_NoAwardTypes() {
     CaseDetail soaCase = buildCaseDetail("anytype");
-    List<SoaProceedingMappingContext> SoaProceedingMappingContexts = Collections.singletonList(
+    List<SoaProceedingMappingContext> soaProceedingMappingContexts = Collections.singletonList(
         SoaProceedingMappingContext.builder().build());
 
     AwardTypeLookupDetail awardTypes = new AwardTypeLookupDetail();
@@ -125,13 +128,13 @@ class SoaApplicationMappingContextBuilderTest {
     when(lookupService.getAwardTypes()).thenReturn(Mono.just(awardTypes));
 
     assertThrows(CaabApplicationException.class, () ->
-        applicationService.buildCaseOutcomeMappingContext(soaCase, SoaProceedingMappingContexts));
+        applicationService.buildCaseOutcomeMappingContext(soaCase, soaProceedingMappingContexts));
   }
 
   @Test
   void testBuildSoaCaseOutcomeMappingContext_UnknownAwardType() {
     CaseDetail soaCase = buildCaseDetail("anytype");
-    List<SoaProceedingMappingContext> SoaProceedingMappingContexts = Collections.singletonList(
+    List<SoaProceedingMappingContext> soaProceedingMappingContexts = Collections.singletonList(
         SoaProceedingMappingContext.builder().build());
 
     AwardTypeLookupDetail awardTypes = buildAwardTypeLookupDetail(soaCase);
@@ -141,9 +144,9 @@ class SoaApplicationMappingContextBuilderTest {
     when(lookupService.getAwardTypes()).thenReturn(Mono.just(awardTypes));
 
     Exception e = assertThrows(CaabApplicationException.class, () ->
-        applicationService.buildCaseOutcomeMappingContext(soaCase, SoaProceedingMappingContexts));
+        applicationService.buildCaseOutcomeMappingContext(soaCase, soaProceedingMappingContexts));
 
-    assertEquals(String.format("Failed to find AwardType with code: %s",
+    assertEquals("Failed to find AwardType with code: %s".formatted(
         soaCase.getAwards().get(3).getAwardType()), e.getMessage());
   }
 
@@ -153,8 +156,8 @@ class SoaApplicationMappingContextBuilderTest {
 
     PriorAuthorityTypeDetails priorAuthorityTypeDetails =
         buildPriorAuthorityTypeDetails(REFERENCE_DATA_ITEM_TYPE_LOV);
-    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().get(0);
-    PriorAuthorityDetail priorAuthoritiesItem = priorAuthorityTypeDetail.getPriorAuthorities().get(0);
+    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().getFirst();
+    PriorAuthorityDetail priorAuthoritiesItem = priorAuthorityTypeDetail.getPriorAuthorities().getFirst();
 
     when(lookupService.getPriorAuthorityType(soaPriorAuthority.getPriorAuthorityType()))
         .thenReturn(Mono.just(Optional.of(priorAuthorityTypeDetail)));
@@ -164,28 +167,28 @@ class SoaApplicationMappingContextBuilderTest {
         .description("thedescription");
 
     when(lookupService.getCommonValue(priorAuthoritiesItem.getLovCode(),
-        soaPriorAuthority.getDetails().get(0).getValue()))
+        soaPriorAuthority.getDetails().getFirst().getValue()))
         .thenReturn(Mono.just(Optional.of(lookup)));
 
     SoaPriorAuthorityMappingContext result = applicationService.buildPriorAuthorityMappingContext(
         soaPriorAuthority);
 
     verify(lookupService).getCommonValue(priorAuthoritiesItem.getLovCode(),
-        soaPriorAuthority.getDetails().get(0).getValue());
+        soaPriorAuthority.getDetails().getFirst().getValue());
 
     assertNotNull(result);
     assertEquals(soaPriorAuthority, result.getSoaPriorAuthority());
     assertNotNull(result.getPriorAuthorityTypeLookup());
-    assertEquals(priorAuthorityTypeDetails.getContent().get(0),
+    assertEquals(priorAuthorityTypeDetails.getContent().getFirst(),
         result.getPriorAuthorityTypeLookup());
 
     assertNotNull(result.getItems());
     assertEquals(1, result.getItems().size());
-    assertEquals(priorAuthoritiesItem, result.getItems().get(0).getKey());
-    assertEquals(soaPriorAuthority.getDetails().get(0).getValue(),
-        result.getItems().get(0).getValue().getCode());
+    assertEquals(priorAuthoritiesItem, result.getItems().getFirst().getKey());
+    assertEquals(soaPriorAuthority.getDetails().getFirst().getValue(),
+        result.getItems().getFirst().getValue().getCode());
     assertEquals(lookup.getDescription(),
-        result.getItems().get(0).getValue().getDescription());
+        result.getItems().getFirst().getValue().getDescription());
   }
 
   @Test
@@ -194,7 +197,7 @@ class SoaApplicationMappingContextBuilderTest {
 
     PriorAuthorityTypeDetails priorAuthorityTypeDetails =
         buildPriorAuthorityTypeDetails("otherDataType");
-    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().get(0);
+    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().getFirst();
 
     when(lookupService.getPriorAuthorityType(soaPriorAuthority.getPriorAuthorityType()))
         .thenReturn(Mono.just(Optional.of(priorAuthorityTypeDetail)));
@@ -205,17 +208,17 @@ class SoaApplicationMappingContextBuilderTest {
     assertNotNull(result);
     assertEquals(soaPriorAuthority, result.getSoaPriorAuthority());
     assertNotNull(result.getPriorAuthorityTypeLookup());
-    assertEquals(priorAuthorityTypeDetails.getContent().get(0),
+    assertEquals(priorAuthorityTypeDetails.getContent().getFirst(),
         result.getPriorAuthorityTypeLookup());
 
     assertNotNull(result.getItems());
     assertEquals(1, result.getItems().size());
-    assertEquals(priorAuthorityTypeDetails.getContent().get(0).getPriorAuthorities().get(0),
-        result.getItems().get(0).getKey());
-    assertEquals(soaPriorAuthority.getDetails().get(0).getValue(),
-        result.getItems().get(0).getValue().getCode());
-    assertEquals(soaPriorAuthority.getDetails().get(0).getValue(),
-        result.getItems().get(0).getValue().getDescription());
+    assertEquals(priorAuthorityTypeDetails.getContent().getFirst().getPriorAuthorities().getFirst(),
+        result.getItems().getFirst().getKey());
+    assertEquals(soaPriorAuthority.getDetails().getFirst().getValue(),
+        result.getItems().getFirst().getValue().getCode());
+    assertEquals(soaPriorAuthority.getDetails().getFirst().getValue(),
+        result.getItems().getFirst().getValue().getDescription());
   }
 
   @Test
@@ -229,7 +232,7 @@ class SoaApplicationMappingContextBuilderTest {
         () -> applicationService.buildPriorAuthorityMappingContext(
             soaPriorAuthority));
 
-    assertEquals(String.format("Failed to find PriorAuthorityType with code: %s",
+    assertEquals("Failed to find PriorAuthorityType with code: %s".formatted(
         soaPriorAuthority.getPriorAuthorityType()), e.getMessage());
   }
 
@@ -238,7 +241,7 @@ class SoaApplicationMappingContextBuilderTest {
     PriorAuthority soaPriorAuthority = buildPriorAuthority();
 
     PriorAuthorityDetail priorAuthoritiesItem = new PriorAuthorityDetail()
-        .code(soaPriorAuthority.getDetails().get(0).getName())
+        .code(soaPriorAuthority.getDetails().getFirst().getName())
         .description("priorAuthItemDesc")
         .dataType(REFERENCE_DATA_ITEM_TYPE_LOV);
 
@@ -251,20 +254,20 @@ class SoaApplicationMappingContextBuilderTest {
         .thenReturn(Mono.just(Optional.of(priorAuthorityTypeDetail)));
 
     when(lookupService.getCommonValue(priorAuthoritiesItem.getLovCode(),
-        soaPriorAuthority.getDetails().get(0).getValue()))
+        soaPriorAuthority.getDetails().getFirst().getValue()))
         .thenReturn(Mono.empty());
 
     Exception e = assertThrows(CaabApplicationException.class,
         () -> applicationService.buildPriorAuthorityMappingContext(
             soaPriorAuthority));
 
-    assertEquals(String.format("Failed to find common value with code: %s",
-        soaPriorAuthority.getDetails().get(0).getValue()), e.getMessage());
+    assertEquals("Failed to find common value with code: %s".formatted(
+        soaPriorAuthority.getDetails().getFirst().getValue()), e.getMessage());
   }
 
   @Test
   void testBuildSoaProceedingMappingContext_Emergency() {
-    uk.gov.laa.ccms.soa.gateway.model.ProceedingDetail soaProceeding =
+    ProceedingDetail soaProceeding =
         buildProceedingDetail(STATUS_DRAFT);
     CaseDetail soaCase = buildCaseDetail(APP_TYPE_EMERGENCY);
 
@@ -276,7 +279,7 @@ class SoaApplicationMappingContextBuilderTest {
 
     CommonLookupValueDetail proceedingStatusLookup =
         new CommonLookupValueDetail();
-    when(lookupService.getCommonValue(COMMON_VALUE_PROCEEDING_STATUS,  soaProceeding.getStatus()))
+    when(lookupService.getCommonValue(COMMON_VALUE_PROCEEDING_STATUS, soaProceeding.getStatus()))
         .thenReturn(Mono.just(Optional.of(proceedingStatusLookup)));
 
     CommonLookupValueDetail matterTypeLookup = new CommonLookupValueDetail()
@@ -288,7 +291,7 @@ class SoaApplicationMappingContextBuilderTest {
     CommonLookupValueDetail levelOfServiceLookup = new CommonLookupValueDetail()
         .code(soaProceeding.getLevelOfService())
         .description("the los");
-    when(lookupService.getCommonValue(COMMON_VALUE_LEVEL_OF_SERVICE,soaProceeding.getLevelOfService()))
+    when(lookupService.getCommonValue(COMMON_VALUE_LEVEL_OF_SERVICE, soaProceeding.getLevelOfService()))
         .thenReturn(Mono.just(Optional.of(levelOfServiceLookup)));
 
     CommonLookupValueDetail clientInvLookup = new CommonLookupValueDetail()
@@ -298,9 +301,9 @@ class SoaApplicationMappingContextBuilderTest {
         .thenReturn(Mono.just(Optional.of(clientInvLookup)));
 
     CommonLookupValueDetail scopeLimitationOneLookup = new CommonLookupValueDetail()
-        .code(soaProceeding.getScopeLimitations().get(0).getScopeLimitation())
+        .code(soaProceeding.getScopeLimitations().getFirst().getScopeLimitation())
         .description("the limitation 1");
-    when(lookupService.getCommonValue(COMMON_VALUE_SCOPE_LIMITATIONS, soaProceeding.getScopeLimitations().get(0).getScopeLimitation()))
+    when(lookupService.getCommonValue(COMMON_VALUE_SCOPE_LIMITATIONS, soaProceeding.getScopeLimitations().getFirst().getScopeLimitation()))
         .thenReturn(Mono.just(Optional.of(scopeLimitationOneLookup)));
 
     CommonLookupValueDetail scopeLimitationTwoLookup = new CommonLookupValueDetail()
@@ -319,26 +322,26 @@ class SoaApplicationMappingContextBuilderTest {
     ScopeLimitationDetails scopeLimitationOne = new ScopeLimitationDetails()
         .totalElements(1)
         .addContentItem(
-            new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+            new ScopeLimitationDetail()
                 .costLimitation(BigDecimal.ZERO)
                 .emergencyCostLimitation(BigDecimal.ZERO));
 
     ScopeLimitationDetails scopeLimitationTwo = new ScopeLimitationDetails()
         .totalElements(1)
         .addContentItem(
-            new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+            new ScopeLimitationDetail()
                 .costLimitation(BigDecimal.TEN)
                 .emergencyCostLimitation(BigDecimal.ZERO));
 
     ScopeLimitationDetails scopeLimitationThree = new ScopeLimitationDetails()
         .totalElements(1)
         .addContentItem(
-            new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+            new ScopeLimitationDetail()
                 .costLimitation(BigDecimal.ZERO)
                 .emergencyCostLimitation(BigDecimal.ONE));
 
     when(lookupService.getScopeLimitationDetails(any(
-        uk.gov.laa.ccms.data.model.ScopeLimitationDetail.class)))
+        ScopeLimitationDetail.class)))
         .thenReturn(Mono.just(scopeLimitationOne))
         .thenReturn(Mono.just(scopeLimitationTwo))
         .thenReturn(Mono.just(scopeLimitationThree));
@@ -384,9 +387,9 @@ class SoaApplicationMappingContextBuilderTest {
     assertEquals(proceedingStatusLookup, result.getProceedingStatusLookup());
     assertNotNull(result.getScopeLimitations());
     assertEquals(3, result.getScopeLimitations().size());
-    assertEquals(soaProceeding.getScopeLimitations().get(0),
-        result.getScopeLimitations().get(0).getKey());
-    assertEquals(scopeLimitationOneLookup, result.getScopeLimitations().get(0).getValue());
+    assertEquals(soaProceeding.getScopeLimitations().getFirst(),
+        result.getScopeLimitations().getFirst().getKey());
+    assertEquals(scopeLimitationOneLookup, result.getScopeLimitations().getFirst().getValue());
     assertEquals(soaProceeding.getScopeLimitations().get(1),
         result.getScopeLimitations().get(1).getKey());
     assertEquals(scopeLimitationTwoLookup, result.getScopeLimitations().get(1).getValue());
@@ -395,9 +398,9 @@ class SoaApplicationMappingContextBuilderTest {
     assertEquals(scopeLimitationThreeLookup, result.getScopeLimitations().get(2).getValue());
 
     // Check the proceeding outcome data
-    assertEquals(outcomeResults.getContent().get(0), result.getOutcomeResultLookup());
-    assertEquals(stageEnds.getContent().get(0), result.getStageEndLookup());
-    assertEquals(courts.getContent().get(0), result.getCourtLookup());
+    assertEquals(outcomeResults.getContent().getFirst(), result.getOutcomeResultLookup());
+    assertEquals(stageEnds.getContent().getFirst(), result.getStageEndLookup());
+    assertEquals(courts.getContent().getFirst(), result.getCourtLookup());
 //          return true; // Return true to indicate the match is successful
 //        })
 //        .verifyComplete();
@@ -405,7 +408,7 @@ class SoaApplicationMappingContextBuilderTest {
 
   @Test
   void testCalculateProceedingCostLimitation_NonEmergency() {
-    uk.gov.laa.ccms.soa.gateway.model.ProceedingDetail soaProceeding =
+    ProceedingDetail soaProceeding =
         buildProceedingDetail(STATUS_DRAFT);
     CaseDetail soaCase = buildCaseDetail(APP_TYPE_EXCEPTIONAL_CASE_FUNDING);
 
@@ -413,26 +416,26 @@ class SoaApplicationMappingContextBuilderTest {
     ScopeLimitationDetails scopeLimitationOne = new ScopeLimitationDetails()
         .totalElements(1)
         .addContentItem(
-            new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+            new ScopeLimitationDetail()
                 .costLimitation(BigDecimal.ZERO)
                 .emergencyCostLimitation(BigDecimal.ZERO));
 
     ScopeLimitationDetails scopeLimitationTwo = new ScopeLimitationDetails()
         .totalElements(1)
         .addContentItem(
-            new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+            new ScopeLimitationDetail()
                 .costLimitation(BigDecimal.TEN)
                 .emergencyCostLimitation(BigDecimal.ZERO));
 
     ScopeLimitationDetails scopeLimitationThree = new ScopeLimitationDetails()
         .totalElements(1)
         .addContentItem(
-            new uk.gov.laa.ccms.data.model.ScopeLimitationDetail()
+            new ScopeLimitationDetail()
                 .costLimitation(BigDecimal.ZERO)
                 .emergencyCostLimitation(BigDecimal.ONE));
 
     when(lookupService.getScopeLimitationDetails(any(
-        uk.gov.laa.ccms.data.model.ScopeLimitationDetail.class)))
+        ScopeLimitationDetail.class)))
         .thenReturn(Mono.just(scopeLimitationOne))
         .thenReturn(Mono.just(scopeLimitationTwo))
         .thenReturn(Mono.just(scopeLimitationThree));
@@ -445,14 +448,14 @@ class SoaApplicationMappingContextBuilderTest {
             soaCase);
 
     verify(lookupService, times(3))
-        .getScopeLimitationDetails(any(uk.gov.laa.ccms.data.model.ScopeLimitationDetail.class));
+        .getScopeLimitationDetails(any(ScopeLimitationDetail.class));
 
     assertEquals(expectedCostLimitation, result);
   }
 
   @Test
   void testAddProceedingOutcomeContext_NullOutcome() {
-    final uk.gov.laa.ccms.soa.gateway.model.ProceedingDetail soaProceeding =
+    final ProceedingDetail soaProceeding =
         buildProceedingDetail(STATUS_DRAFT);
     soaProceeding.setOutcome(null);
 
@@ -479,7 +482,7 @@ class SoaApplicationMappingContextBuilderTest {
 
     CommonLookupValueDetail applicationTypeLookup = new CommonLookupValueDetail();
 
-    uk.gov.laa.ccms.data.model.ProviderDetail providerDetail = buildProviderDetail(
+    ProviderDetail providerDetail = buildProviderDetail(
         soaCase.getApplicationDetails().getProviderDetails().getProviderOfficeId(),
         soaCase.getApplicationDetails().getProviderDetails().getFeeEarnerContactId(),
         soaCase.getApplicationDetails().getProviderDetails().getSupervisorContactId());
@@ -511,7 +514,7 @@ class SoaApplicationMappingContextBuilderTest {
     // content here.
     when(ebsApiClient.getProceeding(any(String.class)))
         .thenReturn(Mono.just(new uk.gov.laa.ccms.data.model.ProceedingDetail()));
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_PROCEEDING_STATUS),  any(String.class)))
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_PROCEEDING_STATUS), any(String.class)))
         .thenReturn(Mono.just(Optional.of(new CommonLookupValueDetail())));
     when(lookupService.getAwardTypes()).thenReturn(Mono.just(
         new AwardTypeLookupDetail()
@@ -525,7 +528,7 @@ class SoaApplicationMappingContextBuilderTest {
     assertEquals(applicationTypeLookup, result.getApplicationType());
     assertEquals(providerDetail, result.getProviderDetail());
     assertEquals(providerDetail.getOffices().get(2), result.getProviderOffice());
-    assertEquals(providerDetail.getOffices().get(2).getFeeEarners().get(0),
+    assertEquals(providerDetail.getOffices().get(2).getFeeEarners().getFirst(),
         result.getFeeEarnerContact());
     assertEquals(providerDetail.getOffices().get(2).getFeeEarners().get(1),
         result.getSupervisorContact());
@@ -567,12 +570,12 @@ class SoaApplicationMappingContextBuilderTest {
 
     CommonLookupValueDetail applicationTypeLookup = new CommonLookupValueDetail();
 
-    uk.gov.laa.ccms.data.model.ProviderDetail providerDetail = buildProviderDetail(
+    ProviderDetail providerDetail = buildProviderDetail(
         soaCase.getApplicationDetails().getProviderDetails().getProviderOfficeId(),
         soaCase.getApplicationDetails().getProviderDetails().getFeeEarnerContactId(),
         soaCase.getApplicationDetails().getProviderDetails().getSupervisorContactId());
 
-    when(lookupService.getCommonValue(COMMON_VALUE_APPLICATION_TYPE,soaCase.getCertificateType()))
+    when(lookupService.getCommonValue(COMMON_VALUE_APPLICATION_TYPE, soaCase.getCertificateType()))
         .thenReturn(Mono.just(Optional.of(applicationTypeLookup)));
 
     when(lookupService.getCommonValue(COMMON_VALUE_APPLICATION_TYPE,
@@ -585,21 +588,21 @@ class SoaApplicationMappingContextBuilderTest {
 
     CommonLookupValueDetail matterTypeLookup =
         new CommonLookupValueDetail().code("mat1").description("mat 1");
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_MATTER_TYPES),anyString())).thenReturn(Mono.just(Optional.of(matterTypeLookup)));
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_MATTER_TYPES), anyString())).thenReturn(Mono.just(Optional.of(matterTypeLookup)));
 
     CommonLookupValueDetail levelOfServiceLookup =
         new CommonLookupValueDetail().code("los1").description("los 1");
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_LEVEL_OF_SERVICE),anyString())).thenReturn(Mono.just(Optional.of(levelOfServiceLookup)));
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_LEVEL_OF_SERVICE), anyString())).thenReturn(Mono.just(Optional.of(levelOfServiceLookup)));
 
     CommonLookupValueDetail clientInvolvementLookup =
         new CommonLookupValueDetail().code("ci1").description("ci 1");
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_CLIENT_INVOLVEMENT_TYPES),anyString())).thenReturn(Mono.just(Optional.of(clientInvolvementLookup)));
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_CLIENT_INVOLVEMENT_TYPES), anyString())).thenReturn(Mono.just(Optional.of(clientInvolvementLookup)));
 
     // Also need to mock calls for the 'sub' mapping contexts, but we aren't testing their
     // content here.
     when(ebsApiClient.getProceeding(any(String.class)))
         .thenReturn(Mono.just(new uk.gov.laa.ccms.data.model.ProceedingDetail()));
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_PROCEEDING_STATUS),  any(String.class)))
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_PROCEEDING_STATUS), any(String.class)))
         .thenReturn(Mono.just(Optional.of(new CommonLookupValueDetail())));
     when(lookupService.getAwardTypes()).thenReturn(Mono.just(
         new AwardTypeLookupDetail()
@@ -633,7 +636,7 @@ class SoaApplicationMappingContextBuilderTest {
     soaCase.getAwards().clear(); // Awards tested separately.
 
 
-    uk.gov.laa.ccms.data.model.ProviderDetail providerDetail = buildProviderDetail(
+    ProviderDetail providerDetail = buildProviderDetail(
         soaCase.getApplicationDetails().getProviderDetails().getProviderOfficeId(),
         soaCase.getApplicationDetails().getProviderDetails().getFeeEarnerContactId(),
         soaCase.getApplicationDetails().getProviderDetails().getSupervisorContactId());
@@ -648,22 +651,22 @@ class SoaApplicationMappingContextBuilderTest {
 
     CommonLookupValueDetail matterTypeLookup =
         new CommonLookupValueDetail().code("mat1").description("mat 1");
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_MATTER_TYPES),anyString())).thenReturn(Mono.just(Optional.of(matterTypeLookup)));
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_MATTER_TYPES), anyString())).thenReturn(Mono.just(Optional.of(matterTypeLookup)));
 
     CommonLookupValueDetail levelOfServiceLookup =
         new CommonLookupValueDetail().code("los1").description("los 1");
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_LEVEL_OF_SERVICE),anyString())).thenReturn(Mono.just(Optional.of(levelOfServiceLookup)));
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_LEVEL_OF_SERVICE), anyString())).thenReturn(Mono.just(Optional.of(levelOfServiceLookup)));
 
     CommonLookupValueDetail clientInvolvementLookup =
         new CommonLookupValueDetail().code("ci1").description("ci 1");
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_CLIENT_INVOLVEMENT_TYPES),anyString())).thenReturn(Mono.just(Optional.of(clientInvolvementLookup)));
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_CLIENT_INVOLVEMENT_TYPES), anyString())).thenReturn(Mono.just(Optional.of(clientInvolvementLookup)));
 
 
     // Also need to mock calls for the 'sub' mapping contexts, but we aren't testing their
     // content here.
     when(ebsApiClient.getProceeding(any(String.class)))
         .thenReturn(Mono.just(new uk.gov.laa.ccms.data.model.ProceedingDetail()));
-    when(lookupService.getCommonValue(eq(COMMON_VALUE_PROCEEDING_STATUS),  any(String.class)))
+    when(lookupService.getCommonValue(eq(COMMON_VALUE_PROCEEDING_STATUS), any(String.class)))
         .thenReturn(Mono.just(Optional.of(new CommonLookupValueDetail())));
     when(lookupService.getAwardTypes()).thenReturn(Mono.just(
         new AwardTypeLookupDetail()
